--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Fizzmore
 subtitle: Light up your investment
 email: support@fizzmore.com
 description: Bi-weekly blogs on investment insights and customized trading strategies
-baseurl: /home # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 
 # homepage tiles
